SPX-304:[Acume] pergen configuration required to avoid out of memory scenarios of permgen.
Conflicts:

	Profiles/Default/rubix_acume_template.xml


Former-commit-id: ac3f2d315fdcc2802157e51fd7a19faf38dc9b57